add some study demo

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,21 +1,30 @@
 eclipse.preferences.version=1
-encoding//com/heaven7/python/study/array.py=utf-8
+encoding//com/heaven7/python/advance/common_lib.py=UTF8
+encoding//com/heaven7/python/advance/json.py=UTF8
+encoding//com/heaven7/python/advance/request.py=UTF8
 encoding//com/heaven7/python/study/class.py=utf-8
 encoding//com/heaven7/python/study/class2.py=utf-8
 encoding//com/heaven7/python/study/compute.py=utf-8
+encoding//com/heaven7/python/study/control.py=UTF8
 encoding//com/heaven7/python/study/deliver2.py=utf-8
 encoding//com/heaven7/python/study/deliver_param.py=UTF8
 encoding//com/heaven7/python/study/file_in.py=utf-8
 encoding//com/heaven7/python/study/file_in_out.py=utf-8
+encoding//com/heaven7/python/study/filter.py=utf-8
 encoding//com/heaven7/python/study/func.py=utf-8
 encoding//com/heaven7/python/study/input2.py=utf-8
 encoding//com/heaven7/python/study/interface.py=utf-8
+encoding//com/heaven7/python/study/lambda.py=utf-8
+encoding//com/heaven7/python/study/list.py=utf-8
+encoding//com/heaven7/python/study/map.py=utf-8
 encoding//com/heaven7/python/study/operator.py=utf-8
 encoding//com/heaven7/python/study/print.py=utf-8
 encoding//com/heaven7/python/study/print2.py=utf-8
 encoding//com/heaven7/python/study/print3.py=utf-8
 encoding//com/heaven7/python/study/print4.py=utf-8
+encoding//com/heaven7/python/study/reduce.py=utf-8
 encoding//com/heaven7/python/study/string1.py=utf-8
+encoding//com/heaven7/python/study/string2.py=utf-8
 encoding//com/heaven7/python/study/transfer_char.py=utf-8
 encoding//com/heaven7/python/study/var.py=utf-8
 encoding//com/heaven7/python/study/var2.py=utf-8
