add thread demo

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -7,6 +7,7 @@ encoding//com/heaven7/python/advance/http_test.py=UTF8
 encoding//com/heaven7/python/advance/https_test.py=UTF8
 encoding//com/heaven7/python/advance/json1.py=UTF8
 encoding//com/heaven7/python/advance/pickle1.py=UTF8
+encoding//com/heaven7/python/advance/test/test_prop.properties=UTF-8
 encoding//com/heaven7/python/advance/test/test_prop.py=UTF8
 encoding//com/heaven7/python/study/class.py=utf-8
 encoding//com/heaven7/python/study/class2.py=utf-8
