continue study machine-study

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -9,6 +9,13 @@ encoding//com/heaven7/python/advance/json1.py=UTF8
 encoding//com/heaven7/python/advance/pickle1.py=UTF8
 encoding//com/heaven7/python/advance/test/test_prop.properties=UTF-8
 encoding//com/heaven7/python/advance/test/test_prop.py=UTF8
+encoding//com/heaven7/python/advance2/matrix_test.py=utf-8
+encoding//com/heaven7/python/advance2/min_test.py=utf-8
+encoding//com/heaven7/python/advance2/range_test.py=utf-8
+encoding//com/heaven7/python/advance2/shape_test.py=utf-8
+encoding//com/heaven7/python/advance2/sum_test.py=utf-8
+encoding//com/heaven7/python/advance2/tile_test.py=utf-8
+encoding//com/heaven7/python/machine_study/kNN.py=utf-8
 encoding//com/heaven7/python/study/class.py=utf-8
 encoding//com/heaven7/python/study/class2.py=utf-8
 encoding//com/heaven7/python/study/compute.py=utf-8
