add some demo for matplotlib

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -32,8 +32,12 @@ encoding//com/heaven7/python/machine_study/handwriting_test.py=utf-8
 encoding//com/heaven7/python/machine_study/kNN.py=utf-8
 encoding//com/heaven7/python/science/matplot_test/complex_test.py=utf-8
 encoding//com/heaven7/python/science/matplot_test/line_test.py=utf-8
+encoding//com/heaven7/python/science/matplot_test/polygon_test.py=utf-8
+encoding//com/heaven7/python/science/numpy_test/FigureCanvas_test.py=utf-8
+encoding//com/heaven7/python/science/numpy_test/FigureCanvas_test2.py=utf-8
 encoding//com/heaven7/python/science/numpy_test/array_test.py=utf-8
 encoding//com/heaven7/python/science/numpy_test/cast_dataType_test.py=utf-8
+encoding//com/heaven7/python/science/numpy_test/meshgrid_test.py=utf-8
 encoding//com/heaven7/python/study/class.py=utf-8
 encoding//com/heaven7/python/study/class2.py=utf-8
 encoding//com/heaven7/python/study/compute.py=utf-8
@@ -60,3 +64,4 @@ encoding//com/heaven7/python/study/string2.py=utf-8
 encoding//com/heaven7/python/study/transfer_char.py=utf-8
 encoding//com/heaven7/python/study/var.py=utf-8
 encoding//com/heaven7/python/study/var2.py=utf-8
+encoding/<project>=UTF-8
