--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -30,6 +30,8 @@ encoding//com/heaven7/python/machine_study/CA_test.py=utf-8
 encoding//com/heaven7/python/machine_study/ct_idea.py=utf-8
 encoding//com/heaven7/python/machine_study/handwriting_test.py=utf-8
 encoding//com/heaven7/python/machine_study/kNN.py=utf-8
+encoding//com/heaven7/python/machine_study/plain_Bayes_test.py=utf-8
+encoding//com/heaven7/python/machine_study/use_CA.py=utf-8
 encoding//com/heaven7/python/science/matplot_test/complex_test.py=utf-8
 encoding//com/heaven7/python/science/matplot_test/line_test.py=utf-8
 encoding//com/heaven7/python/science/matplot_test/polygon_test.py=utf-8
@@ -64,4 +66,5 @@ encoding//com/heaven7/python/study/string2.py=utf-8
 encoding//com/heaven7/python/study/transfer_char.py=utf-8
 encoding//com/heaven7/python/study/var.py=utf-8
 encoding//com/heaven7/python/study/var2.py=utf-8
+encoding//com/heaven7/python/summary/common_utils.py=utf-8
 encoding/<project>=UTF-8
