朴素贝叶斯ing

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -24,13 +24,15 @@ encoding//com/heaven7/python/advance2/sum_test.py=utf-8
 encoding//com/heaven7/python/advance2/tile_test.py=utf-8
 encoding//com/heaven7/python/machine.baselib/CA.py=utf-8
 encoding//com/heaven7/python/machine.baselib/CART.py=utf-8
+encoding//com/heaven7/python/machine.baselib/bayes_lib.py=utf-8
 encoding//com/heaven7/python/machine.baselib/handwriting_lib.py=utf-8
 encoding//com/heaven7/python/machine_study/CART_test.py=utf-8
 encoding//com/heaven7/python/machine_study/CA_test.py=utf-8
+encoding//com/heaven7/python/machine_study/bayes_test.py=utf-8
 encoding//com/heaven7/python/machine_study/ct_idea.py=utf-8
 encoding//com/heaven7/python/machine_study/handwriting_test.py=utf-8
 encoding//com/heaven7/python/machine_study/kNN.py=utf-8
-encoding//com/heaven7/python/machine_study/plain_Bayes_test.py=utf-8
+encoding//com/heaven7/python/machine_study/note_Bayes_test.py=utf-8
 encoding//com/heaven7/python/machine_study/use_CA.py=utf-8
 encoding//com/heaven7/python/science/matplot_test/complex_test.py=utf-8
 encoding//com/heaven7/python/science/matplot_test/line_test.py=utf-8
@@ -39,7 +41,9 @@ encoding//com/heaven7/python/science/numpy_test/FigureCanvas_test.py=utf-8
 encoding//com/heaven7/python/science/numpy_test/FigureCanvas_test2.py=utf-8
 encoding//com/heaven7/python/science/numpy_test/array_test.py=utf-8
 encoding//com/heaven7/python/science/numpy_test/cast_dataType_test.py=utf-8
+encoding//com/heaven7/python/science/numpy_test/log_test.py=utf-8
 encoding//com/heaven7/python/science/numpy_test/meshgrid_test.py=utf-8
+encoding//com/heaven7/python/science/numpy_test/zeros_test.py=utf-8
 encoding//com/heaven7/python/study/class.py=utf-8
 encoding//com/heaven7/python/study/class2.py=utf-8
 encoding//com/heaven7/python/study/compute.py=utf-8
@@ -67,4 +71,5 @@ encoding//com/heaven7/python/study/transfer_char.py=utf-8
 encoding//com/heaven7/python/study/var.py=utf-8
 encoding//com/heaven7/python/study/var2.py=utf-8
 encoding//com/heaven7/python/summary/common_utils.py=utf-8
+encoding//com/heaven7/python/summary/log_lib.py=utf-8
 encoding/<project>=UTF-8
