--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,12 +1,15 @@
 eclipse.preferences.version=1
 encoding//com/heaven7/python/advance/Properties.py=UTF8
 encoding//com/heaven7/python/advance/common_lib.py=UTF8
+encoding//com/heaven7/python/advance/contant_test.py=utf-8
 encoding//com/heaven7/python/advance/http_post_test.py=UTF8
 encoding//com/heaven7/python/advance/http_server_test.py=UTF8
 encoding//com/heaven7/python/advance/http_test.py=UTF8
 encoding//com/heaven7/python/advance/https_test.py=UTF8
 encoding//com/heaven7/python/advance/json1.py=UTF8
+encoding//com/heaven7/python/advance/logging_test.py=utf-8
 encoding//com/heaven7/python/advance/pickle1.py=UTF8
+encoding//com/heaven7/python/advance/reg_test.py=utf-8
 encoding//com/heaven7/python/advance/test/test_prop.properties=UTF-8
 encoding//com/heaven7/python/advance/test/test_prop.py=UTF8
 encoding//com/heaven7/python/advance2/argsort_test.py=utf-8
@@ -19,6 +22,7 @@ encoding//com/heaven7/python/advance2/numpy_matrix_test.py=utf-8
 encoding//com/heaven7/python/advance2/operator_test.py=utf-8
 encoding//com/heaven7/python/advance2/range_test.py=utf-8
 encoding//com/heaven7/python/advance2/shape_test.py=utf-8
+encoding//com/heaven7/python/advance2/singleInstance_test.py=utf-8
 encoding//com/heaven7/python/advance2/sort_test.py=utf-8
 encoding//com/heaven7/python/advance2/sum_test.py=utf-8
 encoding//com/heaven7/python/advance2/tile_test.py=utf-8
@@ -29,6 +33,7 @@ encoding//com/heaven7/python/machine.baselib/handwriting_lib.py=utf-8
 encoding//com/heaven7/python/machine_study/CART_test.py=utf-8
 encoding//com/heaven7/python/machine_study/CA_test.py=utf-8
 encoding//com/heaven7/python/machine_study/bayes_test.py=utf-8
+encoding//com/heaven7/python/machine_study/bayes_test2.py=utf-8
 encoding//com/heaven7/python/machine_study/ct_idea.py=utf-8
 encoding//com/heaven7/python/machine_study/handwriting_test.py=utf-8
 encoding//com/heaven7/python/machine_study/kNN.py=utf-8
@@ -43,6 +48,8 @@ encoding//com/heaven7/python/science/numpy_test/array_test.py=utf-8
 encoding//com/heaven7/python/science/numpy_test/cast_dataType_test.py=utf-8
 encoding//com/heaven7/python/science/numpy_test/log_test.py=utf-8
 encoding//com/heaven7/python/science/numpy_test/meshgrid_test.py=utf-8
+encoding//com/heaven7/python/science/numpy_test/ones_test.py=utf-8
+encoding//com/heaven7/python/science/numpy_test/random_test.py=utf-8
 encoding//com/heaven7/python/science/numpy_test/zeros_test.py=utf-8
 encoding//com/heaven7/python/study/class.py=utf-8
 encoding//com/heaven7/python/study/class2.py=utf-8
@@ -71,5 +78,6 @@ encoding//com/heaven7/python/study/transfer_char.py=utf-8
 encoding//com/heaven7/python/study/var.py=utf-8
 encoding//com/heaven7/python/study/var2.py=utf-8
 encoding//com/heaven7/python/summary/common_utils.py=utf-8
+encoding//com/heaven7/python/summary/const.py=utf-8
 encoding//com/heaven7/python/summary/log_lib.py=utf-8
 encoding/<project>=UTF-8
