--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -30,6 +30,7 @@ encoding//com/heaven7/python/machine.baselib/CA.py=utf-8
 encoding//com/heaven7/python/machine.baselib/CART.py=utf-8
 encoding//com/heaven7/python/machine.baselib/bayes_lib.py=utf-8
 encoding//com/heaven7/python/machine.baselib/handwriting_lib.py=utf-8
+encoding//com/heaven7/python/machine.baselib/logistic_lib.py=utf-8
 encoding//com/heaven7/python/machine_study/CART_test.py=utf-8
 encoding//com/heaven7/python/machine_study/CA_test.py=utf-8
 encoding//com/heaven7/python/machine_study/bayes_test.py=utf-8
@@ -37,14 +38,16 @@ encoding//com/heaven7/python/machine_study/bayes_test2.py=utf-8
 encoding//com/heaven7/python/machine_study/ct_idea.py=utf-8
 encoding//com/heaven7/python/machine_study/handwriting_test.py=utf-8
 encoding//com/heaven7/python/machine_study/kNN.py=utf-8
+encoding//com/heaven7/python/machine_study/logistic_test1.py=utf-8
 encoding//com/heaven7/python/machine_study/note_Bayes_test.py=utf-8
+encoding//com/heaven7/python/machine_study/note_logistic.py=utf-8
 encoding//com/heaven7/python/machine_study/use_CA.py=utf-8
 encoding//com/heaven7/python/science/matplot_test/complex_test.py=utf-8
 encoding//com/heaven7/python/science/matplot_test/line_test.py=utf-8
 encoding//com/heaven7/python/science/matplot_test/polygon_test.py=utf-8
 encoding//com/heaven7/python/science/numpy_test/FigureCanvas_test.py=utf-8
 encoding//com/heaven7/python/science/numpy_test/FigureCanvas_test2.py=utf-8
-encoding//com/heaven7/python/science/numpy_test/array_test.py=utf-8
+encoding//com/heaven7/python/science/numpy_test/array_mat_test.py=utf-8
 encoding//com/heaven7/python/science/numpy_test/cast_dataType_test.py=utf-8
 encoding//com/heaven7/python/science/numpy_test/log_test.py=utf-8
 encoding//com/heaven7/python/science/numpy_test/meshgrid_test.py=utf-8
