--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -45,6 +45,7 @@ encoding//com/heaven7/python/machine_study/use_CA.py=utf-8
 encoding//com/heaven7/python/science/matplot_test/complex_test.py=utf-8
 encoding//com/heaven7/python/science/matplot_test/line_test.py=utf-8
 encoding//com/heaven7/python/science/matplot_test/polygon_test.py=utf-8
+encoding//com/heaven7/python/science/matplot_test/scatter_test.py=utf-8
 encoding//com/heaven7/python/science/numpy_test/FigureCanvas_test.py=utf-8
 encoding//com/heaven7/python/science/numpy_test/FigureCanvas_test2.py=utf-8
 encoding//com/heaven7/python/science/numpy_test/array_mat_test.py=utf-8
